	* mg-dummy calculations can be run with any number (n>3) of grid points
	* Updated PMG license to LGPL
	* Added per-atom SASA information output from APOLAR calculations
	* Added per-atom verbosity to APOLAR calculation outputs
	* Ability to read-in MCSF-format finite element meshes (e.g., as produced by Holst group GAMER software)
- BUG FIXES
	* Clarified ELEC/DIME and ELEC/PDIME documentation
	* Added more transparent warnings/error messages about path lengths which exceed the 80-character limit
	* Fixed small typo in user guide in installation instructions
	* Fixed memory leaks throughout the APBS code
	* Fixed NOsh_parseREAD errors for input files with \r line feeds.
	* Fixed a variable setting error in the test examples
	* Fixed a bug where memory usage is reported incorrectly for large allocations on 64-bit systems
	* Added DTRSV to APBS-supplied BLAS to satisfy FEtk SuperLU dependency

#############################################################################
                                 VERSION 0.5.1 
                                   July 2007
#############################################################################
- NEW FEATURES
	* Replaced APOLAR->glen and APOLAR->dime keywords with APOLAR->grid
	* Deprecated mergedx. Added mergedx2
		- mergedx2 takes the bounding box that a user wishes to calculate a map for, as well as a resolution of the output map. An output map meeting those specifications is calculated and store.
	* Added pKa tutorial
	* Added warning about strange grid settings (MGparm)
	* Fixed a bug in vpmg.c that occured when a user supplied a dielectric map with the ionic strength set to zero, causing the map to not be used.
	* Removed deprecated (as of 0.5.0) tools/manip/acc in lieu of new APOLAR APBS features
	* Added enumerations for return codes, new PBE solver (SMPBE) and linear/ nonlinear types
	* Added in code for Size-Modified PBE (SMPBE)
- BUG FIXES
	* Fixed buffer over-run problem