@@ -14,6 +14,7 @@
 	* Added per-atom verbosity to APOLAR calculation outputs
 	* Ability to read-in MCSF-format finite element meshes (e.g., as produced by Holst group GAMER software)
 - BUG FIXES
+	* Updated tools/python/apbslib* for new NOsh functionality
 	* Clarified ELEC/DIME and ELEC/PDIME documentation
 	* Added more transparent warnings/error messages about path lengths which exceed the 80-character limit
 	* Fixed small typo in user guide in installation instructions
